Fixed bug #30182 (SOAP module processing WSDL file dumps core).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@168952 c90b9560-bf6c-de11-be94-00142212c4b1